fit_predictor/tsp_gls/evaluates/run4/2024-12-31_16-54-02/problem_iter3_response1.txt_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main_1/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics_v2 as heuristics
  File "E:\Projects\CO\reevo-main_1\problems\tsp_gls\gpt.py", line 18
    local_min = np.min([distance_matrix[i, j], distance_matrix[i, k] + distance_matrix[k, j] for k in range(len(distance_matrix)) if k != i and k != j])
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: did you forget parentheses around the comprehension target?

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main_1/problems/tsp_gls/eval.py", line 12, in <module>
    from gpt import heuristics
  File "E:\Projects\CO\reevo-main_1\problems\tsp_gls\gpt.py", line 18
    local_min = np.min([distance_matrix[i, j], distance_matrix[i, k] + distance_matrix[k, j] for k in range(len(distance_matrix)) if k != i and k != j])
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: did you forget parentheses around the comprehension target?
